--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="nuestra_empresa.html">Nuestra Empresa</a></li>
-                <li><a href="#catalogo">Catálogo</a></li>
-                <li><a href="#contacto">Contáctenos</a></li>
+                <li><a href="catologo.html">Catálogo</a></li>
+                <li><a href="contacto.html">Contáctenos</a></li>
             </ul>
         </nav>
     </header>
@@ -23,26 +23,9 @@
         <p>La mejor selección de artesanías hechas a mano con amor y dedicación.</p>
     </section>
 
-    
-    <section id="catalogo">
-        <h2>Catálogo</h2>
-        <div class="productos">
-            <!-- Aquí se cargarán los productos -->
-        </div>
-    </section>
+  
 
-    <section id="contacto">
-        <h2>Contáctenos</h2>
-        <form id="formContacto">
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" required>
-            <label for="email">Correo electrónico:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="mensaje">Mensaje:</label>
-            <textarea id="mensaje" name="mensaje" required></textarea>
-            <button type="submit">Enviar</button>
-        </form>
-    </section>
+
 
     <footer>
         <p>&copy; 2025 LyA Artesanías. Todos los derechos reservados.</p>
