--- a/nuestra_empresa.html
+++ b/nuestra_empresa.html
@@ -12,8 +12,8 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="nuestra_empresa.html">Nuestra Empresa</a></li>
-                <li><a href="#catalogo">Catálogo</a></li>
-                <li><a href="#contacto">Contáctenos</a></li>
+                <li><a href="catologo.html">Catálogo</a></li>
+                <li><a href="contacto.html">Contáctenos</a></li>
             </ul>
         </nav>
     </header>
