--- a/catologo.html
+++ b/catologo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    #Comentario
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -10,7 +11,7 @@
     <section id="catalogo">
         <h2>Catálogo</h2>
         <div class="productos">
-            <!-- Aquí se cargarán los productos -->
+            <!-- Aquí se cargarán loss productos -->
 
 
 
