--- a/catologo.html
+++ b/catologo.html
@@ -3,19 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Catálogo de Productos</title>
     <link rel="stylesheet" href="codigocss.css">
 </head>
 <body>
+    <header>
+        <div class="logo-container">
+            <a href="index.html"><img src="imagenes/logo.jpg" alt="LyA Artesanías"></a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="nuestra_empresa.html">Nuestra Empresa</a></li>
+                <li><a href="#">Catálogo</a></li>
+                <li><a href="contacto.html">Contáctenos</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <section id="catalogo">
         <h2>Catálogo</h2>
         <div class="productos">
-            <!-- Aquí se cargarán los productos -->
-
-
-
-            
+            <!-- Aquí se cargarán los productos dinámicamente -->
         </div>
     </section>
+
+    <section id="agregar-producto">
+        <h2>Agregar Nuevo Producto</h2>
+        <form id="formAgregarProducto">
+            <label for="nombre">Nombre del Producto:</label>
+            <input type="text" id="nombre" required>
+
+            <label for="imagen">URL de la Imagen:</label>
+            <input type="url" id="imagen" required>
+
+            <label for="precio">Precio:</label>
+            <input type="text" id="precio" required>
+
+            <button type="submit">Agregar Producto</button>
+        </form>
+    </section>
+
+    <script src="codigo_java.js"></script>
 </body>
+<footer>
+    <div class="footer-container">
+        <p>&copy; 2025 LyA Artesanías. Todos los derechos reservados.</p>
+
+        <div class="social-links">
+            <a href="https://wa.me/1234567890" target="_blank" class="whatsapp">
+                <img src="imagenes/png-clipart-whats-app-logo-whatsapp-logo-whatsapp-cdr-leaf-thumbnail.png" alt="WhatsApp">
+            </a>
+            <a href="https://www.facebook.com/" target="_blank" class="facebook">
+                <img src="imagenes/Facebook_Logo_(2019).png" alt="Facebook">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank" class="instagram">
+                <img src="imagenes/sm_5b37de3263964.jpg" alt="Instagram">
+            </a>
+        </div>
+    </div>
+</footer>
+
 </html>
