--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="codigocss.css">
 </head>
 <body>
+    <header>
+        <div class="logo-container">
+            <a href="index.html"><img src="imagenes/logo.jpg" alt="LyA Artesanías"></a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="nuestra_empresa.html">Nuestra Empresa</a></li>
+                <li><a href="catologo.html">Catálogo</a></li>
+                <li><a href="#">Contáctenos</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
     <section id="contacto">
         <h2>Contáctenos</h2>
         <form id="formContacto">
@@ -20,4 +35,22 @@
         </form>
     </section>
 </body>
+<footer>
+    <div class="footer-container">
+        <p>&copy; 2025 LyA Artesanías. Todos los derechos reservados.</p>
+
+        <div class="social-links">
+            <a href="https://wa.me/1234567890" target="_blank" class="whatsapp">
+                <img src="imagenes/png-clipart-whats-app-logo-whatsapp-logo-whatsapp-cdr-leaf-thumbnail.png" alt="WhatsApp">
+            </a>
+            <a href="https://www.facebook.com/" target="_blank" class="facebook">
+                <img src="imagenes/Facebook_Logo_(2019).png" alt="Facebook">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank" class="instagram">
+                <img src="imagenes/sm_5b37de3263964.jpg" alt="Instagram">
+            </a>
+        </div>
+    </div>
+</footer>
+
 </html>
