--- a/nuestra_empresa.html
+++ b/nuestra_empresa.html
@@ -1,25 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LyA Artesanías - Nuestra Empresa</title>
     <link rel="stylesheet" href="codigocss.css">
 </head>
 <body>
     <header>
+        <div class="logo-container">
+            <a href="index.html"><img src="imagenes/logo.jpg" alt="LyA Artesanías"></a>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="nuestra_empresa.html">Nuestra Empresa</a></li>
-                <li><a href="#catalogo">Catálogo</a></li>
-                <li><a href="#contacto">Contáctenos</a></li>
+                <li><a href="#">Nuestra Empresa</a></li>
+                <li><a href="catologo.html">Catálogo</a></li>
+                <li><a href="contacto.html">Contáctenos</a></li>
             </ul>
         </nav>
     </header>
+
     <section id="empresa">
         <h2>Nuestra Empresa</h2>
         <p>LyA Artesanías es una tienda virtual que ofrece una variedad de productos artesanales hechos a mano con materiales locales y técnicas tradicionales.</p>
+
+        <!-- Historia -->
+        <h3>Nuestra Historia</h3>
+        <p>Fundada en 2015, LyA Artesanías nació con el propósito de resaltar la belleza y el valor del trabajo artesanal. A lo largo de los años, hemos trabajado con talentosos artesanos de distintas regiones, promoviendo el comercio justo y la preservación de técnicas tradicionales.</p>
+
+        <!-- Misión y Valores -->
+        <h3>Nuestra Misión</h3>
+        <p>Promover el arte y la cultura artesanal a través de productos únicos y de alta calidad, brindando oportunidades económicas a los artesanos y fomentando el consumo responsable.</p>
+
+        <h3>Nuestros Valores</h3>
+        <ul>
+            <li><strong>Calidad:</strong> Cada producto es elaborado con atención al detalle.</li>
+            <li><strong>Sostenibilidad:</strong> Usamos materiales amigables con el medio ambiente.</li>
+            <li><strong>Autenticidad:</strong> Respetamos las técnicas artesanales tradicionales.</li>
+            <li><strong>Compromiso Social:</strong> Apoyamos a comunidades locales y trabajamos bajo principios de comercio justo.</li>
+        </ul>
+
+        <!-- Testimonios -->
+        <h3>Lo que dicen nuestros clientes</h3>
+        <blockquote>“Los productos de LyA Artesanías son simplemente hermosos. Se nota el amor y la dedicación en cada pieza. ¡Recomendado 100%!” - <em>María López</em></blockquote>
+        <blockquote>“Me encanta comprar aquí porque sé que estoy apoyando a artesanos locales y recibiendo productos únicos.” - <em>Carlos Ramírez</em></blockquote>
+
+        <!-- Imagen de los artesanos -->
+        <div class="imagen-artesanos">
+            <img src="https://i.pinimg.com/originals/83/42/e2/8342e2a856afc9bad13c8db9a770bb0e.jpg" alt="Artesanos trabajando">
+            <p><em>Uno de nuestros artesanos en acción, creando piezas únicas.</em></p>
+        </div>
     </section>
 </body>
+<footer>
+    <div class="footer-container">
+        <p>&copy; 2025 LyA Artesanías. Todos los derechos reservados.</p>
+
+        <div class="social-links">
+            <a href="https://wa.me/1234567890" target="_blank" class="whatsapp">
+                <img src="imagenes/png-clipart-whats-app-logo-whatsapp-logo-whatsapp-cdr-leaf-thumbnail.png" alt="WhatsApp">
+            </a>
+            <a href="https://www.facebook.com/" target="_blank" class="facebook">
+                <img src="imagenes/Facebook_Logo_(2019).png" alt="Facebook">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank" class="instagram">
+                <img src="imagenes/sm_5b37de3263964.jpg" alt="Instagram">
+            </a>
+        </div>
+    </div>
+</footer>
+
 </html>
